# fresh-finder

backend/: Dockerfile  README.md  pyproject.toml
backend/src/: entrypoint.py
backend/src/modules/: image_analyser_gemini.py  image_analyser_visionai.py
backend/src/prompts/gemini/: meat.txt  vegetables.txt
backend/src/prompts/visionapi/: meat.txt  vegetables.txt
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: context.tsx  layout.tsx  page.tsx
frontend/src/app/page2/: page.tsx
frontend/src/app/page3/: page.tsx
frontend/src/app/page4/: page.tsx
