[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
google-cloud-aiplatform = "^1.79.0"
python-multipart = "^0.0.20"
google-cloud-vision = "^3.9.0"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
mypy = "^1.14.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
dev.shell = "cd ./src && uvicorn entrypoint:app --reload --host 0.0.0.0 --port 8000"


[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F401", "F841"]
ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = []


[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
explicit_package_bases = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
